FLY wire David/force-app/main/default/objects/User/fields/ARR_Quota__c.field-meta.xml
<CustomField>
    <fullName>ARR_Quota__c</fullName>
    <description>Current Year Quota</description>
    <inlineHelpText>Current Year Quota</inlineHelpText>
    <label>ARR Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>