FLY wire David/force-app/main/default/objects/User/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Which country does this Flymate work in?</description>
    <inlineHelpText>Which country do this Flymate work in?</inlineHelpText>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>