FLY wire David/force-app/main/default/objects/User/fields/CPQ_User__c.field-meta.xml
<CustomField>
    <fullName>CPQ_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify CPQ Users</description>
    <label>CPQ User</label>
    <type>Checkbox</type>
</CustomField>