FLY wire David/force-app/main/default/objects/User/fields/Expired_Password_Notification__c.field-meta.xml
<CustomField>
    <fullName>Expired_Password_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Expired Password Notification, used in time based workflow rule to email user their password will expire in 7 days.</description>
    <inlineHelpText>Expired Password Notification</inlineHelpText>
    <label>Expired Password Notification</label>
    <type>Checkbox</type>
</CustomField>