FLY wire David/force-app/main/default/objects/User/fields/Flow_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Full_Name__c</fullName>
    <description>Copy User Name used to populate info for flow automations (BDR and RM Name Copy for Marketo)</description>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy User Name used to populate info for flow automations (BDR and RM Name Copy for Marketo)</inlineHelpText>
    <label>Flow Full Name</label>
    <type>Text</type>
</CustomField>