FLY wire David/force-app/main/default/objects/User/fields/mkto_si__IsCachingWatchList__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__IsCachingWatchList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCachingWatchList</label>
    <type>Checkbox</type>
</CustomField>