FLY wire David/force-app/main/default/objects/User/fields/My_ARR_Quota__c.field-meta.xml
<CustomField>
    <fullName>My_ARR_Quota__c</fullName>
    <description>If the person looking at this is the user then show the ARR otherwise, show 0</description>
    <formula>IF(
Id = $User.Id,  ARR_Quota__c , 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the person looking at this is the user then show the ARR otherwise, show 0</inlineHelpText>
    <label>My ARR Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>