FLY wire David/force-app/main/default/objects/User/fields/Old_UserID__c.field-meta.xml
<CustomField>
    <fullName>Old_UserID__c</fullName>
    <description>UserID from Previous Salesforce Org to be used as external ID for mapping from old to new.</description>
    <externalId>true</externalId>
    <inlineHelpText>UserID from Previous Salesforce Org to be used as external ID for mapping from old to new.</inlineHelpText>
    <label>Old UserID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>