FLY wire David/force-app/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Which region does this salesforce user live/work in?</description>
    <inlineHelpText>Which region does this salesforce user live/work in?</inlineHelpText>
    <label>OBSRegion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>US - North</fullName>
                <isActive>false</isActive>
                <label>US - North</label>
            </value>
            <value>
                <fullName>US - Southeast</fullName>
                <isActive>false</isActive>
                <label>US - Southeast</label>
            </value>
            <value>
                <fullName>US - West</fullName>
                <isActive>false</isActive>
                <label>US - West</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>