FLY wire David/force-app/main/default/objects/User/fields/User_LongID__c.field-meta.xml
<CustomField>
    <fullName>User_LongID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User LongID</label>
    <type>Text</type>
</CustomField>