FLY wire David/force-app/main/default/objects/User/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Which vertical does this salesforce user work for?</description>
    <inlineHelpText>Choose the Vertical(s) user works.</inlineHelpText>
    <label>Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Non vertical specific</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>