FLY wire David/force-app/main/default/objects/User/listViews/All_Active_Non_Admin_or_Integration.listView-meta.xml
<ListView>
    <fullName>All_Active_Non_Admin_or_Integration</fullName>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>System Administrator</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>B-</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Non Admin or Integration</label>
</ListView>