FLY wire David/force-app/main/default/objects/User/listViews/Legal_Users.listView-meta.xml
<ListView>
    <fullName>Legal_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>Legal</value>
    </filters>
    <label>Legal Users</label>
</ListView>