FLY wire David/force-app/main/default/objects/User/listViews/Non_Frozen_Users.listView-meta.xml
<ListView>
    <fullName>Non_Frozen_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>IS_FROZEN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_FROZEN</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non-Frozen Users</label>
    <sharedTo></sharedTo>
</ListView>