FLY wire David/force-app/main/default/objects/User/listViews/Travel_Sales_Active.listView-meta.xml
<ListView>
    <fullName>Travel_Sales_Active</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <columns>User_Region__c</columns>
    <columns>Country__c</columns>
    <columns>My_ARR_Quota__c</columns>
    <columns>ARR_Quota__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>A - Sales Travel</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Travel Sales Active</label>
</ListView>